# ai-radar

./: .gitignore  DIGEST_DIR_FEATURE.md  Pipfile  README.md  pyproject.toml
src/ai_radar/: cli.py
src/ai_radar/config/: defaults.py  paths.py
src/ai_radar/cron/: installer.py
src/ai_radar/delivery/: markdown.py  slack.py
src/ai_radar/llm/: client.py  prompts.py
src/ai_radar/pipeline/: curation.py  dedup.py  suggestions.py
src/ai_radar/profile/: detector.py  interviewer.py  schema.py  store.py
src/ai_radar/sources/: base.py  github_trending.py  hacker_news.py  registry.py  rss.py
